--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 body{
     font-family: "PT Serif", serif;
     font-size: 20px;
@@ -37,8 +38,8 @@ font-size: 25px;
     margin-left: 100px;
 }
 .blocoCentro{
-  width: 600px;
-  height: 400px;
+  width: 500px;
+  height: 300px;
   background-color:#FDF7F7;
   border-radius: 25px;
   border-color: #d9d9d9 ;
@@ -47,6 +48,7 @@ font-size: 25px;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      text-align: center;
 
 }
   *{
@@ -192,4 +194,76 @@ h5{
   font-size: 25px;
   margin-left: 740px;
   margin-top: 30px;
+}
+.borda-input2{
+  border-radius: 25px;
+  border: none;
+  background-color: #d2d2d2;
+  width: 280px;
+  height: 20px;
+}
+.enviarL{
+  background-color: #60c8b2;
+  color: #fdf7f7;
+  width: 90px;
+  height: 35px;
+  border: none;
+  border-radius: 25px;
+
+}
+.blocoCentroA{
+  width: 600px;
+  height: 400px;
+  background-color:#FDF7F7;
+  border-radius: 25px;
+  border-color: #d9d9d9 ;
+  border-style: solid;
+  position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+}
+
+.bloco-areaP {
+  margin-top: 30px;
+  margin-left: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.area-pagamento, .forma-pagamento {
+  width: 48%;
+}
+
+.forma-pagamento a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  margin-bottom: 10px;
+}
+.forma-pagamento img {
+  margin-right: 10px;
+}
+.pix-container {
+  display: flex;
+  align-items: center;
+}
+.pix-container img {
+  vertical-align: middle;
+}
+.pix-container span {
+  margin-left: 5px;
+}
+.margem{
+  margin-left: 20px;
+}
+.enviarPix{
+  width: 200px;
+  background-color: #60c8b2;
+  color: #fdf7f7;
+  height: 35px;
+  border: none;
+  border-radius: 25px;
+  margin-top: 25px;
 }
