--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
     background-attachment: fixed;
     margin: 0;
     padding: 0;
-    background-image: url(imagemFundo.png);
+    background-image: url('../imagens/imagemFundo.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -135,11 +135,13 @@ th, td {
 }
 
 .car.available {
-  background-image: url('carro-verde.png');
+  background-image: url('../imagens/carro-verde.png');
+  cursor: pointer;
 }
 
 .car.unavailable {
-  background-image: url('carro-vermelho.png');
+  background-image: url('../imagens/carro-vermelho.png');
+  cursor: not-allowed;
 }
 
 .legend {
@@ -185,15 +187,40 @@ h5{
   border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-.reserva-vagas{
+.reserva-vagas {
   font-size: 20px;
-  margin-left: 740px;
+  position: fixed;
+  top: 53%;
+  left: 60%;
+  transform: translate(-50%, -50%);
+  padding: 20px; 
+  width: 60%;
+  max-width: 300px; 
+  margin-top: 45px; 
 
 }
-.titulo-vagas{
+.titulo-vagas {
   font-size: 25px;
-  margin-left: 740px;
-  margin-top: 30px;
+  position: fixed;
+  top: 10%;
+  left: 60%;
+  transform: translateX(-50%);
+  width: 60%;
+  max-width: 300px; 
+  margin-top: 70px;
+  text-align: center;
+}
+#selected-spot {
+  font-size: 15px;
+  position: fixed;
+  top: 16%;
+  left: 60%;
+  transform: translateX(-50%);
+  width: 60%;
+  max-width: 300px; 
+  margin-top: 70px;
+  text-align: center;
+  color: #242424;
 }
 .borda-input2{
   border-radius: 25px;
@@ -267,3 +294,72 @@ h5{
   border-radius: 25px;
   margin-top: 25px;
 }
+
+.title {
+  font-size: 24px; 
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px; 
+}
+
+.grid-container2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  background-color: #5dc1b9;
+  border-radius: 20px;
+  padding: 20px; 
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  overflow-x: hidden;
+  width: 60%;
+  max-width: 300px; 
+  margin-top: 35px; 
+}
+.grid-container3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  background-color: #87b7b3;
+  border-radius: 20px;
+  padding: 20px; 
+  font-weight: bold;
+  font-size: 18px;
+  text-align: center;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  overflow-x: hidden;
+  width: 60%;
+  max-width: 300px; 
+  margin-top: 35px; 
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+
+  border-radius: 20px;
+  padding: 20px;
+  margin-bottom: 10px;
+}
+
+.enviar2 {
+  background-color: #60c8b2;
+  color: #000000;
+  width: 200px;
+  height: 35px;
+  border: none;
+  border-radius: 10px;
+}
+
+
+
